Bug 129605 - FILEOPEN: RTF: character borders/styles are missing or shown in wrong places
Summary: FILEOPEN: RTF: character borders/styles are missing or shown in wrong places
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.5.0
Keywords: bibisected, bisected, regression
: 129631 (view as bug list)
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2019-12-25 04:18 UTC by Justin L
Modified: 2022-08-12 11:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
tdf129522_removeShadowStyleRT.rtf: various shadow/border problems related to adding or removing style settings (4.71 KB, application/rtf)
2019-12-25 04:18 UTC, Justin L
Details
tdf129522_removeShadowStyleRT.pdf: from Word 2003 (16.45 KB, application/pdf)
2019-12-25 04:21 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2019-12-25 04:18:07 UTC
Created attachment 156775 [details]
tdf129522_removeShadowStyleRT.rtf: various shadow/border problems related to adding or removing style settings

Starting in LO 4.4, character style borders/shadows are not showing well. In this example document the borders defined in the character style "CharShadow" are not applied to the word "shadow" in the first sentence "Once a style inherits a shadow". (Note that the shadow property IS kept, but not the borders).

Bisected to LO 4.4 commit 76c0d0abc89cd8948706083c2660b71a2dad670c
    Author:     Miklos Vajna
    CommitDate: Sun Sep 7 09:50:12 2014 +0200
        RTF import: adapt getProperties() to createStyleProperties()
Comment 1 Justin L 2019-12-25 04:21:14 UTC
Created attachment 156776 [details]
tdf129522_removeShadowStyleRT.pdf: from Word 2003
Comment 2 Justin L 2019-12-27 16:42:15 UTC
Proposed patches to fix this and related items. This also should fix related bug 129631.
-gerrit.libreoffice.org/c/core/+/85868 tdf#129605 rtfimport: deduplicating borders loses information
-gerrit.libreoffice.org/c/core/+/85658 tdf#129522 SvxShadowItem/writerfilter: allow shadow_NONE overrides
-gerrit.libreoffice.org/c/core/+/85760 tdf#129522 ww8import/export: allow char shadow_NONE overrides
-gerrit.libreoffice.org/c/core/+/85869 tdf#129522 writerfilter: allow char shadow_NONE overrides
-gerrit.libreoffice.org/c/core/+/85870 tdf#129522 ooxmlexport: allow char shadow_NONE override
-gerrit.libreoffice.org/c/core/+/85871 cleanup tdf#129522: indenting
Comment 3 Commit Notification 2020-01-02 09:30:02 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/83832ea3890d9418f17b480ececa204ae54cee18

tdf#129605 rtfimport: deduplicating borders loses information

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2022-08-12 11:29:31 UTC
*** Bug 129631 has been marked as a duplicate of this bug. ***