tdf#129605 rtfimport: deduplicating borders loses information

Because at least ONE direct attribute still existes, that SPRM
overrides the style SPRM, and therefore the style contents
are ignored. But deduplicating has removed the matching parts
from the paragraph, so any children properties that
match the style revert to default values. In this unit test,
only the green border-color was kept, and so a default
none-border was created.

The UI in writer also directly applies all border properties
during a color change, so further style changes in the
border-style or thickness no longer have any effect.
So there is no reason to try to deduplicate border stuff.

UNRESOLVED PROBLEM NOTE:
If deduplication is going to happen, then there needs to be a
merging of character style child attributes and the directly
applied properties - which in practice is the same as not
deduplicating at all. (The problem will still come when the
paragraph ONLY redefines the border color - then there is
nothing to deduplicate and still the style contents are ignored.)

This patch affects paragraph-style borders (in a good way),
since it fixes tdf#129631 as well. Probably every SPRM
that expects children should just avoid deduplication...

UNRESOLVED PROBLEM NOTE:
Another problem is that the direct properties themselves
do not seem to be deduplicated. In addition, deduplication
happens against the FIRST instance of the property,
not on the LAST instance (which ultimately is the winner).

Change-Id: I97333fba66db5cfb5238de426821fe458def329b